--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -2,11 +2,12 @@
     display: flex !important;
     margin-left: auto !important;
     width: 25rem !important;
-    margin-top: 1rem !important;
     margin-right: 1rem !important;
     padding-left: 1rem !important;
     padding-right: 1rem !important;
+    padding-top: 0% !important;
+    padding-bottom: 0% !important;
     border-radius: 3rem !important;
-    background-color: rgba(49, 49, 54, 0.5) !important;
+    background-color: black !important;
 } 
 
